Admin activities index added.

--- a/application/views/scripts/admin/index.phtml
+++ b/application/views/scripts/admin/index.phtml
@@ -10,7 +10,7 @@
                 </a>
             </li>
             <li>
-                <a href="<?php echo $this->baseUrl(); ?>">
+                <a href="<?php echo $this->baseUrl() . '/admin/activities'; ?>">
                     <i class="fa fa-file-text" aria-hidden="true"></i>
                     <h6 class="heading">Activities</h6>
                 </a>
