--- a/application/views/scripts/admin/activities.phtml
+++ b/application/views/scripts/admin/activities.phtml
@@ -1,18 +1,27 @@
 <?= $this->partial('admin/header.phtml', array('pageTitle' => $this->pageTitle)) ?>
-<?= $this->partial('messages.phtml', array('messages' => $this->errorMessage, 'type' => $this->messageType)) ?>
+<?= $this->partial('messages.phtml', array('messages' => $this->messages)) ?>
 <div class="wrapper row3">
     <main class="hoc container clear">
-        <a href="<?php echo $this->baseUrl() . '/admin'; ?>" class="back-button"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back to Admin panel</a>
-        <h1><i class="fa fa-file-text"></i> Activities</h1>
+        <a href="<?php echo $this->baseUrl() . '/admin'; ?>" class="back-button"><i class="fa fa-chevron-left" aria-hidden="true"></i>
+            Back to Admin panel</a>
+        <div class="inline">
+            <h1><i class="fa fa-file-text"></i> Activities </h1> &nbsp;
+            <a href="<?php echo $this->baseUrl() . '/admin/activities/add'; ?>" class="color-default"><i class="fa fa-plus" aria-hidden="true"></i>
+                Add new Activity</a>
+        </div>
         <?php if (!empty($this->activities)): ?>
             <ul class="nospace users-list">
                 <li>Title | Starts - Ends</li>
                 <?php foreach ($this->activities as $activity) : ?>
-                    <li><a href="<?php echo $this->baseUrl() . '/activity/' . $activity->id; ?>" target="_blank"><?php echo $activity->title?></a> | <?php echo $activity->starts_at . ' - ' . $activity->ends_at ?> <span class="fl_right"><a href="#" class="btn small default">Edit</a> | <a href="#" class="btn small danger">Delete</a></span></li>
+                    <li>
+                        <a <?php echo time() > strtotime($activity->starts_at) ? 'class="past-event"' : ''; ?>href="<?php echo $this->baseUrl() . '/activity/' . $activity->id; ?>" target="_blank"><?php echo $activity->title ?></a>
+                        | <?php echo $activity->starts_at . ' - ' . $activity->ends_at ?>
+                        <span class="fl_right"><a href="<?php echo $this->baseUrl() . '/admin/activities/edit/' . $activity->id; ?>" class="btn small default"><i class="fa fa-pencil" aria-hidden="true"></i> Edit</a> | <a href="<?php echo $this->baseUrl() . '/admin/activities/delete/' . $activity->id; ?>" class="delete-activity btn small danger"><i class="fa fa-times" aria-hidden="true"></i> Delete</a></span>
+                    </li>
                 <?php endforeach; ?>
             </ul>
-        <?php else: ?>
-            <p>There are no users</p>
+            <?php if (count($this->activities)): ?><?php echo $this->paginationControl($this->activities, 'Sliding', 'pagination.phtml'); ?><?php endif; ?><?php else: ?>
+            <p>There are no activities</p>
         <?php endif; ?>
     </main>
 </div>
