--- a/application/views/scripts/admin/footer.phtml
+++ b/application/views/scripts/admin/footer.phtml
@@ -3,5 +3,7 @@
 <script src="<?php echo $this->baseUrl(); ?>/js/jquery.mobilemenu.js" type="text/javascript"></script>
 <script src="<?php echo $this->baseUrl(); ?>/js/jquery.mobilemenu.js" type="text/javascript"></script>
 <script src="<?php echo $this->baseUrl(); ?>/js/jquery.flexslider-min.js" type="text/javascript"></script>
+<script src="<?php echo $this->baseUrl(); ?>/js/jquery.magnific-popup.min.js" type="text/javascript"></script>
+<script src="<?php echo $this->baseUrl(); ?>/js/main.js" type="text/javascript"></script>
 </body>
 </html>
