--- a/application/views/scripts/admin/users.phtml
+++ b/application/views/scripts/admin/users.phtml
@@ -1,16 +1,28 @@
 <?= $this->partial('admin/header.phtml', array('pageTitle' => $this->pageTitle)) ?>
-<?= $this->partial('messages.phtml', array('messages' => $this->errorMessage, 'type' => $this->messageType)) ?>
 <div class="wrapper row3">
     <main class="hoc container clear">
-        <a href="<?php echo $this->baseUrl() . '/admin'; ?>" class="back-button"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back to Admin panel</a>
+        <?= $this->partial('messages.phtml', array('messages' => $this->messages)) ?>
+        <a href="<?php echo $this->baseUrl() . '/admin'; ?>" class="back-button"><i class="fa fa-chevron-left" aria-hidden="true"></i>
+            Back to Admin panel</a>
         <h1><i class="fa fa-users"></i> Users</h1>
         <?php if (!empty($this->users)): ?>
             <ul class="nospace users-list">
                 <li>Name - Username <span class="fl_right">Last Login | Actions</span></li>
                 <?php foreach ($this->users as $user) : ?>
-                    <li><?php echo !empty($user->real_name) ? $user->real_name . ' - ' : '';  ?><?php echo $user->username; ?> <span class="fl_right"><?php echo $user->last_login?> | <a href="javascript:void(0)" data-role="<?php echo $user->role ?>"><?php echo intval($user->role) > 0 ? 'Disable' : 'Make';?> admin</a></span></span></li>
-                <?php endforeach; ?>
+                    <li>
+                    <?php echo !empty($user->real_name) ? $user->real_name . ' - ' : ''; ?><?php echo $user->username; ?>
+                    <span class="fl_right">
+                    <?php echo $user->last_login ?> |
+                    <?php if ($user->role == 2): ?>
+                        Superadmin
+                    <?php else: ?>
+                        <a href="<?php echo intval($user->role) > 0 ? $this->baseUrl() . '/admin/auth/promote/' . $user->id . '/0' : $this->baseUrl() . '/admin/auth/promote/' . $user->id . '/1'; ?>" data-role="<?php echo $user->role ?>">
+                                <?php echo intval($user->role) > 0 ? 'Disable' : 'Make'; ?> admin</a></span></span></li>
+                    <?php endif; ?><?php endforeach; ?>
             </ul>
+            <?php if (count($this->users)): ?>
+                <?php echo $this->paginationControl($this->users, 'Sliding', 'pagination.phtml'); ?>
+            <?php endif; ?>
         <?php else: ?>
             <p>There are no users</p>
         <?php endif; ?>
