--- a/application/views/scripts/auth/edit.phtml
+++ b/application/views/scripts/auth/edit.phtml
@@ -1,7 +1,7 @@
 <?= $this->partial('header.phtml', array('pageTitle' => $this->pageTitle)) ?>
 <div class="wrapper row3">
     <main class="hoc container clear">
-        <?= $this->partial('messages.phtml', array('messages' => $this->errorMessage, 'type' => $this->messageType)) ?>
+        <?= $this->partial('messages.phtml', array('messages' => $this->messages)) ?>
         <?php
         $this->form->setAction($this->url());
         echo $this->form;
