--- a/application/views/scripts/footer.phtml
+++ b/application/views/scripts/footer.phtml
@@ -1,37 +1,42 @@
 <div class="wrapper row4">
     <footer id="footer" class="hoc clear">
         <div class="one_third first">
-            <h6 class="title">Imperdiet diam et ante</h6>
+            <h6 class="title">Contact info</h6>
             <ul class="nospace linklist contact">
                 <li><i class="fa fa-map-marker"></i>
                     <address>
-                        Street Name &amp; Number, Town, Postcode/Zip
+                        Bulevar Umetnosti 37, Beograd, 11070
                     </address>
                 </li>
                 <li><i class="fa fa-phone"></i> +00 (123) 456 7890<br>
                     +00 (123) 456 7890</li>
                 <li><i class="fa fa-fax"></i> +00 (123) 456 7890</li>
-                <li><i class="fa fa-envelope-o"></i> info@domain.com</li>
+                <li><i class="fa fa-envelope-o"></i> info@igraonica.zend</li>
             </ul>
         </div>
         <div class="one_third">
-            <h6 class="title">Tincidunt vitae viverra</h6>
+            <h6 class="title">Useful links</h6>
             <ul class="nospace linklist">
-                <li><a href="#">At neque eu pharetra etiam ornare</a></li>
-                <li><a href="#">Neque vel arcu faucibus venenatis</a></li>
-                <li><a href="#">A lacinia lectus non gravida maecenas</a></li>
-                <li><a href="#">Sagittis nec turpis viverra venenatis</a></li>
-                <li><a href="#">Nunc elementum vestibulum at</a></li>
+                <li <?php echo $this->url() == '/activities' ? 'class="active"' : ''; ?>><a href="<?php echo $this->baseUrl() . "/activities"; ?>">Activities</a></li>
+                <li <?php echo $this->url() == '/reservation' ? 'class="active"' : ''; ?>><a href="<?php echo $this->baseUrl() . "/reservation"; ?>">Reservation</a></li>
+                <li <?php echo $this->url() == '/contact' ? 'class="active"' : ''; ?>><a href="<?php echo $this->baseUrl() . "/contact"; ?>">Contact</a></li>
+                <?php
+                $isLoggedIn = Zend_Auth::getInstance()->hasIdentity();
+                ?>
+                <?php if (!$isLoggedIn): ?>
+                    <li <?php echo $this->url() == '/auth/login' ? 'class="active"' : ''; ?>>
+                        <a href="<?php echo $this->baseUrl() . '/auth/login'; ?>">Login</a></li>
+                    <li <?php echo $this->url() == '/auth/signup' ? 'class="active"' : ''; ?>>
+                        <a href="<?php echo $this->baseUrl() . '/auth/signup'; ?>">Sign up</a></li>
+                <?php endif; ?>
             </ul>
         </div>
         <div class="one_third">
-            <h6 class="title">Turpis in elementum</h6>
-            <p class="btmspace-30">Eget turpis cras cursus dolor sit amet lectus pretium ut consequat.</p>
-            <form method="post" action="#">
+            <h6 class="title">Search Activities</h6>
+            <form method="get" action="<?php echo $this->baseUrl() . '/activities/' ?>">
                 <fieldset>
                     <legend>Newsletter:</legend>
-                    <input class="btmspace-15" type="text" value="" placeholder="Name">
-                    <input class="btmspace-15" type="text" value="" placeholder="Email">
+                    <input name="search" class="btmspace-15" type="text" value="<?php echo $this->search; ?>" placeholder="Search">
                     <button type="submit" value="submit">Submit</button>
                 </fieldset>
             </form>
@@ -40,8 +45,7 @@
 </div>
 <div class="wrapper row5">
     <div id="copyright" class="hoc clear">
-        <p class="fl_left">Copyright &copy; 2016 - All Rights Reserved - <a href="#">Domain Name</a></p>
-        <p class="fl_right">Template by <a target="_blank" href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
+        <p class="fl_left">Copyright &copy; <?php echo date('Y')?> - All Rights Reserved - <a href="<?php echo $this->baseUrl(); ?>">Playland</a></p>
     </div>
 </div>
 <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
@@ -50,5 +54,7 @@
 <script src="<?php echo $this->baseUrl(); ?>/js/jquery.mobilemenu.js" type="text/javascript"></script>
 <script src="<?php echo $this->baseUrl(); ?>/js/jquery.mobilemenu.js" type="text/javascript"></script>
 <script src="<?php echo $this->baseUrl(); ?>/js/jquery.flexslider-min.js" type="text/javascript"></script>
+<script src="<?php echo $this->baseUrl(); ?>/js/jquery.magnific-popup.min.js" type="text/javascript"></script>
+<script src="<?php echo $this->baseUrl(); ?>/js/main.js" type="text/javascript"></script>
 </body>
 </html>
