--- a/application/views/scripts/page/contact.phtml
+++ b/application/views/scripts/page/contact.phtml
@@ -1,7 +1,7 @@
 <?= $this->partial('header.phtml', array('pageTitle' => $this->pageTitle)) ?>
 <div class="wrapper row3">
     <main class="hoc container clear">
-        <?= $this->partial('messages.phtml', array('messages' => $this->errorMessage, 'type' => $this->messageType)) ?>
+        <?= $this->partial('messages.phtml', array('messages' => $this->messages)) ?>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2830.3683701409427!2d20.407616615286894!3d44.81405957909863!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475a657d5dcc2a5d%3A0x4bb951c843ce27ba!2sBulevar+umetnosti+37%2C+Beograd!5e0!3m2!1sen!2srs!4v1513134830979" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         <?php
         $this->form->setAction($this->url());
