--- a/application/views/scripts/page/index.phtml
+++ b/application/views/scripts/page/index.phtml
@@ -1,4 +1,4 @@
 <?= $this->partial('header.phtml', array('pageTitle' => $this->pageTitle)) ?>
-<?= $this->partial('messages.phtml', array('messages' => $this->errorMessage, 'type' => $this->messageType)) ?>
+<?= $this->partial('messages.phtml', array('messages' => $this->messages)) ?>
 <h1>Page index</h1>
 <?= $this->partial('footer.phtml') ?>
