--- a/public/css/framework.css
+++ b/public/css/framework.css
@@ -43,7 +43,7 @@ html, body{margin:0; padding:0; font-size:14px; line-height:1.6em;}
 .clear, .clear::after, .group, .group::after{clear:both;}
 
 a{outline:none; text-decoration:none;}
-
+a:hover{ text-decoration: underline; }
 .fl_left, .imgl{float:left;}
 .fl_right, .imgr{float:right;}
 
@@ -57,6 +57,7 @@ img{width:auto; max-width:100%; height:auto; margin:0; padding:0; border:none; l
 body, input, textarea, select{font-family:Verdana, Geneva, sans-serif;}
 h1, h2, h3, h4, h5, h6, .heading{font-family:Georgia, "Times New Roman", Times, serif;}
 
+.color-default{  color: #0E76A8;  }  .color-default:hover{  color: #0a567b;  }
 
 /* Forms
 --------------------------------------------------------------------------------------------------------------- */
@@ -72,6 +73,13 @@ button, input[type="submit"]{border:1px solid;color:#FFFFFF; background-color:#E
 /* Generalise
 --------------------------------------------------------------------------------------------------------------- */
 h1, h2, h3, h4, h5, h6, .heading{margin:0 0 20px 0; font-size:22px; line-height:normal; font-weight:normal;}
+
+h1{  font-size: 35px;  }
+h2{  font-size: 28px;  }
+h3{  font-size: 22px;  }
+h4{  font-size: 17px;  }
+h5{  font-size: 14px;  }
+h6{  font-size: 12px;  }
 
 address{font-style:normal; font-weight:normal;}
 hr{display:block; width:100%; height:1px; border:solid; border-width:1px 0 0 0;}
@@ -98,8 +106,10 @@ address, article, aside, figcaption, figure, footer, header, main, nav, section{
 --------------------------------------------------------------------------------------------------------------- */
 .one_half, .one_third, .two_third, .one_quarter, .two_quarter, .three_quarter{display:inline-block; float:left; margin:0 0 0 3.06748466257669%; list-style:none;}
 
+.one_third:first-child{  margin-left:0; clear:left;  }
+.one_third:nth-child(3n + 1){  margin-left:0; clear:left;  }
 .first{margin-left:0; clear:left;}
-
+.services li{ min-height: 260px; }
 .one_quarter{width:22.69938650306748%;}
 .one_third{width:31.28834355828221%;}
 .one_half, .two_quarter{width:48.46625766871166%;}
